--- a/Portfolio2024/package.json
+++ b/Portfolio2024/package.json
@@ -21,6 +21,8 @@
     "@angular/platform-server": "^18.2.0",
     "@angular/router": "^18.2.0",
     "@angular/ssr": "^18.2.10",
+    "@fontsource/poppins": "^5.1.0",
+    "@fontsource/roboto": "^5.1.0",
     "boxicons": "^2.1.4",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
