--- a/Portfolio2024/package.json
+++ b/Portfolio2024/package.json
@@ -23,6 +23,9 @@
     "@angular/ssr": "^18.2.10",
     "@fontsource/poppins": "^5.1.0",
     "@fontsource/roboto": "^5.1.0",
+    "@fortawesome/free-solid-svg-icons": "^7.0.1",
+    "@ngx-translate/core": "^16.0.4",
+    "@ngx-translate/http-loader": "^16.0.1",
     "boxicons": "^2.1.4",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
